--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,17 @@
       <version>3.1.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>4.9.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib</artifactId>
+      <version>1.8.10</version>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
