--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
       <artifactId>kotlin-stdlib</artifactId>
       <version>1.8.10</version>
     </dependency>
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.5.2</version>
+    </dependency>
 
   </dependencies>
   <build>
